k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  tls:
    - hosts: ["s.mgbarbosa.dev"]
      secretName: url-shortener-cert-secret
  rules:
    - host: s.mgbarbosa.dev
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 80
